# brainstorm

./: .dependency-cruiser.cjs  .gitignore  .npmrc  .prettierignore  BRAINSTORM.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  WORK-PLAN.md  brainstorm.toml  package-lock.json  package.json  tsconfig.base.json
.brainstorm/: routing.yaml
.changeset/: config.json
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  release.yml
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
docs/: PLAN_STATUS.md  README.md  agent-trap-analysis-prompt.md  architecture.md  as-any-audit.md  assessment-audit.md  assessment-evidence.md  assessment-synthesis.md  benchmark-br-vs-cf-ai-platform.md  br-api-spec.md  br-capability-audit.md  brainstorm-llm-v2-vision.md  brainstormrouter-integration.md  code-mode-godmode-spike.md  config-guide.md  cross-project-coordination.md  desktop-qa-plan.md  endpoint-agent-k8s-deploy-target-requirements.md  endpoint-agent-plan.md  endpoint-agent-protocol-v1.md  endpoint-agent-reset-lessons.md  endpoint-agent-threat-model.md  feature-reference.md  forge-results.json  forge-status.json  forge-summary.md  full-review-journal.md  full-review-status.json  getting-started.md  llm-operator-guide.md  platform-contract-v1.md  plugin-development.md  session-state-2026-04-18.md  tool-catalog.json  tools.md
eval-data/: br-vs-cf-ai-platform-2026-04.jsonl  br-vs-cf-ai-platform-queries-v2.jsonl  br-vs-cf-ai-platform-queries.jsonl  (+6 more)
(+198 files in other folders)
