[package]
name = "brainstorm-desktop"
version = "0.1.0"
description = "Brainstorm Desktop — Multi-Model Agent OS"
authors = ["Brainstorm"]
edition = "2021"

[lib]
name = "brainstorm_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
